--- a/bsw/Makefile.am
+++ b/bsw/Makefile.am
@@ -6,7 +6,6 @@
 # SUBDIRS = # icons
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_CONST_RETURNS
-IDL_INCLUDES = -I$(top_srcdir)
 
 #
 # libraries to compile and install
@@ -74,6 +73,7 @@ EXTRA_DIST += $(bsw_private_h_sources)
 EXTRA_DIST += $(bsw_built_sources) $(bsw_built_public_sources) $(bsw_extra_sources)
 
 SFIDL = $(top_builddir)/sfi/sfidl
+SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
 
 #
 # rules to generate built sources
@@ -86,13 +86,13 @@ bswgenapi.h: stamp-bswgenapi.h ;
 # normal autogeneration rules
 stamp-bswgenapi.h: $(top_srcdir)/bse/*.idl $(top_builddir)/bse/*.idl $(SFIDL)
 	echo -e "#include <sfi/sfi.h>\n" > xgen-sbpah \
-	&& $(SFIDL) --header --interface --prefix beast_ $(IDL_INCLUDES) $(top_builddir)/bse/bse.idl >> xgen-sbpah \
+	&& $(SFIDL) $(SFIDL_INC) --header --interface --prefix beast_ $(top_srcdir)/bse/bse.idl >> xgen-sbpah \
 	&& (cmp -s xgen-sbpah bswgenapi.h || cp xgen-sbpah bswgenapi.h) \
 	&& rm -f xgen-sbpah \
 	&& echo timestamp > $@
 bswgenapi.c: bswgenapi.h $(top_srcdir)/bse/*.idl $(top_builddir)/bse/*.idl $(SFIDL)
 	echo -e "#include \"bswgenapi.h\"\n" > xgen-sbpac \
-	&& $(SFIDL) --source --interface --prefix beast_ $(IDL_INCLUDES) $(top_builddir)/bse/bse.idl >> xgen-sbpac \
+	&& $(SFIDL) $(SFIDL_INC) --source --interface --prefix beast_ $(top_srcdir)/bse/bse.idl >> xgen-sbpac \
 	&& cp xgen-sbpac $@ \
 	&& rm -f xgen-sbpac
 
