--- a/plugins/evaluator/Makefile.am
+++ b/plugins/evaluator/Makefile.am
@@ -20,6 +20,7 @@ bseevaluator_la_LDFLAGS = -module -avoid-version
 bseevaluator_la_LIBADD  = $(BSE_LIBS) -lm
 plugins_built_sources += bseevaluator.gen-idl.h
 EXTRA_HEADERS += bseevaluator.idl symbols.h token.h instruction.h compiler.h cpu.h
+$(bseevaluator_la_OBJECTS): bseevaluator.gen-idl.h
 
 plugin_LTLIBRARIES = bseevaluator.la
 
