fixed sfidl option
svn path=/trunk/; revision=2004

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -25,7 +25,7 @@ EXTRA_HEADERS += $(plugin_idl_files)
 SFIDL = ../sfi/sfidl
 SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
 %.gen-idl.h: %.idl $(SFIDL)
-	$(SFIDL) --core-cxx $(SFIDL_INC) -I$(top_builddir) $< > $@ || (rm $@ ; exit 1 )
+	$(SFIDL) --plugin $(SFIDL_INC) -I$(top_builddir) $< > $@ || (rm $@ ; exit 1 )
 
 plugins_built_sources =
 Makefile.plugins: $(srcdir)/listplugins.sh $(PLUGIN_CFILES) Makefile.am
