use G_DEFINE_TYPE() for menu button.
Wed Feb 25 03:40:00 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkauxwidgets.c: use G_DEFINE_TYPE() for menu button.

svn path=/trunk/; revision=2034

--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 _Name=BEAST
 _GenericName=Music Composer
-_Comment=Music Synthesis Tool, MIDI Tracker and Song Composer
+_Comment=MIDI Tracker, Music Composition and Modular Synthesis Application
 Icon=beast.png
 TryExec=beast
 Exec=beast
