--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -18,12 +18,13 @@ CLEANFILES += $(gen_sources)
 #
 # programs to build
 #
-bin_PROGRAMS = bsesh
+bin_PROGRAMS = @BSESH_BINARY@			# this expands to bsesh-$BSE_VERSION
+EXTRA_PROGRAMS = bsesh-\$(BSE_VERSION)		# make automake-1.4 eat bsesh____BSE_VERSION_ variables
+bsesh____BSE_VERSION__SOURCES = bsesh.c bsescminterp.c cxxdummy.cc
+bsesh____BSE_VERSION__LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bsw/libbsw.la $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 # source setups
-bsesh_SOURCES = bsesh.c bsescminterp.c cxxdummy.cc
-bsesh_LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
 bsescminterp.c: # bsescm-genglue.c
 EXTRA_DIST += bsescminterp.h
 
