added suidwrapper program without dependancies, based on a patch by Stefan
Wed Feb 25 14:34:51 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/suidmain.c: added suidwrapper program without dependancies,
        based on a patch by Stefan Westerfeld. the wrapper renices itself to
        -19, drops uid (privileges) and then invokes beast-$VERSION.

        * beast-gtk/Makefile.am: build and install suidwrapper 'beast'.

        * beast-gtk/bstmain.c: drop nice-level once BSE is setup.

        * configure.in: new section AC_SUIDMAIN_REQUIREMENTS. check for all functions
        required to implement renicing in the suidwrapper binary.

        * shell/Makefile.am: build and install suidwrapper 'bsesh'.

        * shell/bsesh.c: drop nice-level once BSE is setup.

svn path=/trunk/; revision=2041

--- a/configure.in
+++ b/configure.in
@@ -386,6 +386,12 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     beastskinsdir=$beastbasedir/v$BSE_VERSION/skins
     AC_SUBST(beastskinsdir)
 ])
+AC_DEFUN(AC_SUIDMAIN_REQUIREMENTS,
+[
+    dnl figure everything required by the suid wrapper
+    AC_CHECK_FUNCS(seteuid)
+    AC_CHECK_FUNCS(setreuid)
+])
 AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 [
     dnl Check for potential pcm devices
@@ -547,6 +553,7 @@ AC_BSE_SHELL_REQUIREMENTS
 AC_BSE_SNDDEV_CHECK
 AC_GXK_REQUIREMENTS
 AC_BEAST_REQUIREMENTS
+AC_SUIDMAIN_REQUIREMENTS
 AC_DOC_REQUIREMENTS
 
 # Automake @VARIABLE@ exports.
