--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -5,6 +5,11 @@
 
 INCLUDES = -I$(top_srcdir) -I. $(BSE_SHELL_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
+DEFS += $(strip                       	\
+	-DG_LOG_DOMAIN=\"bsesh\"       	\
+	$(SUIDMAIN_DEFS)                \
+)
+
 #
 # built sources
 #
@@ -18,15 +23,31 @@ CLEANFILES += $(gen_sources)
 #
 # programs to build
 #
-bin_PROGRAMS = @BSESH_BINARY@			# this expands to bsesh-$BSE_VERSION
+bin_PROGRAMS = bsesh @BSESH_BINARY@		# this expands to bsesh-$BSE_VERSION
 EXTRA_PROGRAMS = bsesh-\$(BSE_VERSION)		# make automake-1.4 eat bsesh____BSE_VERSION_ variables
 bsesh____BSE_VERSION__SOURCES = bsesh.c bsescminterp.c cxxdummy.cc
 bsesh____BSE_VERSION__LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
+bsesh_SOURCES = suidmain-tmp.c
+SUIDMAIN_DEFS=-DSUIDMAIN_EXECUTABLE=\"$(bindir)/@BSESH_BINARY@\"
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bsw/libbsw.la $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 # source setups
 bsescminterp.c: # bsescm-genglue.c
 EXTRA_DIST += bsescminterp.h
+
+# always fetch newest suidmain.c from beast-gtk/ source
+suidmain-tmp.c: $(top_srcdir)/beast-gtk/suidmain.c
+	cp $< $@
+CLEANFILES += suidmain-tmp.c
+
+#
+# make bsesh wrapper suid to allow renicing
+#
+install-exec-local: install-binPROGRAMS
+	true \
+	&& ( chown root $(bindir)/bsesh \
+	&&   chmod 4755 $(bindir)/bsesh ) \
+	|| ( echo "*** WARNING *** bsesh needs to be installed as root to allow renicing ***" && sleep 5 )
 
 
 #
