--- a/configure.in
+++ b/configure.in
@@ -583,6 +583,7 @@ beast-gtk/icons/Makefile
 docs/Makefile
 docs/generated/Makefile
 bse/bseconfig.h
+launchers/Makefile
 library/Makefile
 library/effects/Makefile
 library/instruments/Makefile
